--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "my-vue-app",
+  "name": "storyboard",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "release": "release-it"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@generouted/react-router": "^1.19.10",
     "@neodrag/react": "^2.3.0",
+    "@primer/octicons-react": "^19.14.0",
+    "@primer/primitives": "^10.3.4",
+    "@primer/react": "^37.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -29,6 +34,10 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "release-it": "^18.1.2",
     "vite": "^6.0.5"
+  },
+  "release-it": {
+    "$schema": "https://unpkg.com/release-it/schema/release-it.json"
   }
 }
