--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "storyboard",
+  "name": "storyboardjs",
   "private": true,
   "version": "0.6.0",
   "type": "module",
-  "homepage": "https://dfosco.github.io/storyboard/",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
